samples/_failures_safe/1761334745_cf455e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2194ee81.c: In function ‘main’:
./samples/SAFE/__tmp_2194ee81.c:166:9: error: ‘print’ undeclared (first use in this function); did you mean ‘printf’?
  166 |         print
      |         ^~~~~
      |         printf
./samples/SAFE/__tmp_2194ee81.c:166:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_2194ee81.c:166:14: error: expected ‘;’ at end of input
  166 |         print
      |              ^
      |              ;
./samples/SAFE/__tmp_2194ee81.c:166:9: error: expected declaration or statement at end of input
  166 |         print
      |         ^~~~~
./samples/SAFE/__tmp_2194ee81.c:166:9: error: expected declaration or statement at end of input
